--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "ascotraceR"]
+	path = ascotraceR
+	url = https://github.com/ihsankhaliq/ascotracer
+	shallow = true
+	registered = true
